Regression: Adding nodes into node network causes strange placement and jump of node #111593

Closed
opened 2023-08-27 21:08:53 +02:00 by RT · 8 comments
First-time contributor

System Information
Operating system: Linux-5.15.0-79-generic-x86_64-with-glibc2.31 64 Bits, X11 UI
Graphics card: Mesa DRI Intel(R) HD Graphics 4600 (HSW GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 21.2.6

Blender Version
Broken: version: 3.6.0 Release Candidate, branch: blender-v3.6-release, commit date: 2023-06-26 12:12, hash: f7d46d064487
Worked: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-06-03 10:34, hash: 2ce5fc4a3e43

Caused by cc9c720aae

Short description of error
Adding nodes into node network causes strange placement and jump of node
(see attached animation of what it's doing)

Exact steps for others to reproduce the error
Adding nodes into node network causes strange placement and jump of node
(see attached animation of what it's doing)

The issue happens in the Red filled Box when adding a join node (but it happens with other nodes to)

**System Information** Operating system: Linux-5.15.0-79-generic-x86_64-with-glibc2.31 64 Bits, X11 UI Graphics card: Mesa DRI Intel(R) HD Graphics 4600 (HSW GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 21.2.6 **Blender Version** Broken: version: 3.6.0 Release Candidate, branch: blender-v3.6-release, commit date: 2023-06-26 12:12, hash: `f7d46d064487` Worked: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-06-03 10:34, hash: `2ce5fc4a3e43` Caused by cc9c720aae **Short description of error** Adding nodes into node network causes strange placement and jump of node (see attached animation of what it's doing) **Exact steps for others to reproduce the error** Adding nodes into node network causes strange placement and jump of node (see attached animation of what it's doing) The issue happens in the Red filled Box when adding a join node (but it happens with other nodes to)
RT added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-27 21:08:54 +02:00

Can you attach blend file to reproduce this?

Can you attach blend file to reproduce this?
Iliya Katueshenock added the
Interest
Nodes & Physics
label 2023-08-27 21:12:51 +02:00
Author
First-time contributor

I've added it to the original question along with an animation of what it's doing.

I've added it to the original question along with an animation of what it's doing.
Iliya Katueshenock changed title from Adding nodes into node network causes strange placement and jump of node to Regression: Adding nodes into node network causes strange placement and jump of node 2023-08-27 22:53:02 +02:00
Iliya Katueshenock added
Priority
High
Type
Bug
and removed
Priority
Normal
Type
Report
labels 2023-08-27 22:53:23 +02:00
Iliya Katueshenock added the
Interest
User Interface
label 2023-08-28 00:39:00 +02:00
Member

I suspect this is caused by 1e81d35138. I'll bisect.

I suspect this is caused by 1e81d351386d9271ae3cb1f62237169002584b39. I'll bisect.
Member

Caused by cc9c720aae
@lone_noel ^

Caused by cc9c720aae6b8e8c88d5e349a3997f7896c7905f @lone_noel ^
Pratik Borhade added this to the 3.6 LTS milestone 2023-08-28 08:43:03 +02:00
Member

I see, this is happening because the node is joined into the frame while the offset animation is still going.

I have a few ideas how to address this and will try to make a fix this evening.

I see, this is happening because the node is joined into the frame while the offset animation is still going. I have a few ideas how to address this and will try to make a fix this evening.
Leon Schittek self-assigned this 2023-08-28 13:37:42 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-30 22:08:35 +02:00
Member

@lone_noel , can we backport your fix to 3.6 LTS?

@lone_noel , can we backport your fix to 3.6 LTS?
Member

@PratikPB2123 I tested it and works well. Let me know, if you still need anything from my end! :)

@PratikPB2123 I tested it and works well. Let me know, if you still need anything from my end! :)
Member

ok, thanks. I've added your commit in backporting list: #109399

ok, thanks. I've added your commit in backporting list: #109399
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111593
No description provided.