Fix #111593: Auto-offset when inserting nodes on links inside frames

Apply auto-offset animation in relative steps to avoid issues, when
the parent space of the currently offset node changes.

Pull Request: https://projects.blender.org/blender/blender/pulls/111637