source/blender/blenkernel/BKE_node_runtime.hh
@@ -288,8 +288,6 @@ class bNodeRuntime : NonCopyable, NonMovable {
   /** Update flags. */
   int update = 0;
 
-  /** Initial locx for insert offset animation. */
-  float anim_init_locx;
   /** Offset that will be added to locx for insert offset animation. */
   float anim_ofsx;
 
